# Algorithms

./: .gitignore  .gitignore.swp  .gitmodules  CMakeLists.txt  buildlib.sh  buildtests.sh  main.c  runtests.sh
include/: algorithms.h  lsearch.h
lib/cpp/: lsearch.cpp
lib/include/: lsearch.h
src/: lsearch.c
tests/: CMakeLists.txt  main.cpp
